test/error/type/err2.rzy
type
  Weekday = Enum
    Monday;
    Tuesday;
    Wednesday;
    Thursday;
    Friday;
    Saturday;
    Sunday;
  end

component
  Err2

    implementation elementary

    function foo( x: U{8} )
      z : Weekday = x;
    end

  end

